<resources>
    <string name="app_name">iGotPlaced</string>
    <string name="emailHint">Email Address</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="not_a_member">Not a Member?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="hint_password">Password</string>
    <string name="department">Department</string>
    <string name="college_name">College Name</string>
    <string name="registerButton">Register</string>

    <string name="submit">Submit</string>
    <string name="password_Hint">Password will be sent to your Email Address</string>
    <string name="check_box_message">I\'m Interested to Receive Interview Calls</string>
    <string name="igp">iGOTPLACED</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="profile_details">Profile Details</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit_btn">Submit</string>
    <string name="Define_your_dream_job_interest">Define Your Dream Job Interest</string>
    <string name="details_for_interview">Details For Interview</string>
    <string name="phone_number">Mobile Number</string>
    <string name="current_location">Current Location</string>
    <string name="select_minimum_of_one_industry_company_to_get_started">Select Minimum of One Industry/Company to Get Started</string>
    <string name="contact">Make sure to provide your Mobile Number and Location Details.So that you can be contacted for Interviews</string>
    <string name="industry">Industry</string>
    <string name="about_Us">About Us</string>
    <string name="socialPlacement">Social placement preparation platform for students to share, learn, connect and collaborate.</string>
    <string name="neverMiss">* Never miss any placement events.</string>
    <string name="getNotified">* Get notified and be connected.</string>
    <string name="attendEvents">* Attend events, share and discuss about placement experiences.</string>
    <string name="connectWith">* Connect with experts “Carrier Mentors” and get guidance from real time interviewers.</string>
    <string name="subscribe">Subsrcibe to our newsletter for latest updates about our site for universe.</string>
    <string name="address">No 4 Park side road,\n Nungambakkam,\nChennai 600034.</string>


    <string name="year_prompt">
        <item>Year Of Passout </item>
    </string>
    <string name="packageName">"igotplaced.com.layouts"</string>
    <string name="editClass">"igotplaced.com.layouts.EditProfileActivity"</string>
    <string name="termsAndConditions">"igotplaced.com.layouts.TermsAndConditions"</string>
    <string name="aboutUsFragment">"igotplaced.com.layouts.AboutUs"</string>
    <string name="select_the_year_of_pass_out">Select the year of PassOut</string>
    <string name="err_msg_name">Enter Your Full Name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_college">Enter Your College Name</string>
    <string name="err_msg_department">Enter Your Department</string>
    <string name="err_msg_password">Password Should be more than 4 Characters</string>
    <string name="err_msg_confirm_password">Passwords didn\'t Match!!!</string>
    <string name="err_msg_location">Enter valid location</string>
    <string name="err_msg_mobile">Enter a valid Mobile Number</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="recent_feeds">Recent Feeds</string>
    <string name="recently_got_placed">Recently Got Placed</string>
    <string name="testimonial">Testimonials</string>
    <string name="blog">Blog</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="about_us">About Us</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="events">Events</string>
    <string name="interview_experience">Interview Experience</string>
    <string name="questions">Questions</string>
    <string name="recent_feed">----- Recent Feeds</string>
    <string name="more">more</string>
    <string name="our_awesome_mentors">----- Our Awesome Mentors</string>
    <string name="recently_got_placed_home">----- Recently Got Placed</string>
    <string name="testimonials">----- Testimonials</string>
    <string name="notificationMessage">NotificationMessage</string>
    <string name="recentNotification">Recent Notifications</string>
    <string name="editProfile">Edit Profile</string>
    <string name="areaOfInterest">AREA OF INTEREST</string>
    <string name="upload">Upload</string>
    <string name="title_activity_add_user_experience">AddUserExperience</string>
    <string name="termsDemo">\n\t 1.The content of the pages of this Application is for your general information and use only. It is subject to change without notice.\n
\n\t 2.Neither we nor any third parties provide any warranty or guarantee as to the accuracy, timeliness, performance, completeness or suitability of the information and materials found or offered on this Application for any particular purpose. You acknowledge that such information and materials may contain inaccuracies or errors and we expressly exclude liability for any such inaccuracies or errors to the fullest extent permitted by law.\n
\n\t 3.Your use of any information or materials on this Application is entirely at your own risk, for which we shall not be liable. It shall be your own responsibility to ensure that any products, services or information available through this Application meet your specific requirements.\n
\n\t 4.This Application contains material which is owned by or licensed to us. This material includes, but is not limited to, the design, layout, look, appearance and graphics. Reproduction is prohibited other than in accordance with the copyright notice, which forms part of these terms and conditions.\n
\n\t 5.All trade marks reproduced in this Application which are not the property of, or licensed to, the operator are acknowledged on the Application.\n
\n\t 6.Unauthorised use of this Application may give rise to a claim for damages and/or be a criminal offence.\n
\n\t 7.From time to time this Application may also include links to other Applications. These links are provided for your convenience to provide further information. They do not signify that we endorse the Application(s). We have no responsibility for the content of the linked Application(s).
</string>


</resources>
