<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />


        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notification" />


        <item
            android:id="@+id/blog"
            android:icon="@drawable/ic_blog_24dp"
            android:title="@string/blog" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />


    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">


        <item
            android:id="@+id/privacy_policy"
            android:title="@string/privacy_policy" />

        <item
            android:id="@+id/terms_and_conditions"
            android:title="@string/terms_and_conditions" />

        <item
            android:id="@+id/about_us"
            android:title="@string/about_us" />

    </group>

</menu>