<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:summary="Customize Your Account"
        android:title="Account Settings">
        <intent
            android:targetClass="@string/editClass"
            android:targetPackage="@string/packageName" />
    </PreferenceScreen>

    <PreferenceScreen
        android:title="Terms and Conditions">
        <intent
            android:targetPackage="@string/packageName"
            android:targetClass="@string/termsAndConditions"/>
    </PreferenceScreen>

    <PreferenceScreen
        android:title="About us">
        <intent
            android:targetPackage="@string/packageName"
            android:targetClass="@string/aboutUsFragment"/>
    </PreferenceScreen>

</PreferenceScreen>