<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/button_style">

            <TextView
                android:layout_gravity="center"
                android:id="@+id/textViewRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_details"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:layout_marginTop="@dimen/margin_16"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/editViewPassword"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/colorAccent"
                app:backgroundTint="@color/colorAccent"
                android:hint="@string/password"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/editViewConfirmPassword"
                android:inputType="textEmailAddress"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:textColor="@color/white"
                android:textColorHint="@color/colorAccent"
                app:backgroundTint="@color/colorAccent"
                android:hint="@string/confirm_password"/>


            <TextView
                android:layout_gravity="center"
                android:id="@+id/textViewDreamJob"
                android:text="@string/Define_your_dream_job_interest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/margin_16"
                android:textStyle="bold" />

            <TextView
                android:layout_gravity="start"
                android:id="@+id/textViewMinimum"
                android:text="@string/select_minimum_of_one_industry_company_to_get_started"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/margin_4dp" />




            <TextView
                android:layout_gravity="center"
                android:id="@+id/textViewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_for_interview"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_gravity="start"
                android:id="@+id/textViewContact"
                android:text="@string/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/margin_4dp" />


            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/editViewMobileNumber"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/colorAccent"
                app:backgroundTint="@color/colorAccent"
                android:hint="@string/phone_number"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/editViewLocation"
                android:inputType="text"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="@dimen/margin_16"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorAccent"
                app:backgroundTint="@color/colorAccent"
                android:hint="@string/current_location"/>


        </LinearLayout>


        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/submit_btn"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:id="@+id/register_submit"/>

    </LinearLayout>


</ScrollView>
