<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/button_style"
            android:paddingBottom="@dimen/margin_16">

            <TextView
                android:id="@+id/textViewRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/about_Us"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/socialPlacement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewRegistration"
                android:gravity="center"
                android:text="@string/socialPlacement"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/neverMiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/socialPlacement"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="start"
                android:text="@string/neverMiss"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/getNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/neverMiss"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="start"
                android:text="@string/getNotified"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/attendEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/getNotify"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="start"
                android:text="@string/attendEvents"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/connectWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/attendEvents"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="start"
                android:text="@string/connectWith"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/connectWith"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="center"
                android:text="@string/subscribe"
                android:textColor="#18FFFF"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subscribe"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_4"
                app:srcCompat="@drawable/ic_mail_outline_white_36dp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextSubscribeEmail"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_below="@+id/subscribe"
                android:layout_marginEnd="@dimen/margin_18"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_toEndOf="@+id/imageViewEmail"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/colorAccent"
                app:backgroundTint="@color/colorAccent" />

            <Button
                android:id="@+id/subscribeButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_below="@+id/editTextSubscribeEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_4"
                android:background="@drawable/button_style"
                android:text="Subscribe"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subscribeButton"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/address"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/address"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/whatsApp1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    app:srcCompat="@drawable/wlogo" />

                <TextView
                    android:id="@+id/whatsApp11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_toEndOf="@+id/whatsApp1"
                    android:text="+91 87547 98211"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>