<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="blueangels.com.layouts.MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/LinearLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        android:background="@drawable/button_style"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:orientation="horizontal"
            android:weightSum="8">

            <ImageView
                android:id="@+id/imageViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_weight="2"
                app:srcCompat="@drawable/ic_mail_outline_white_36dp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextEmail"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/margin_18"
                android:layout_weight="6"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:backgroundTint="@color/white" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/LinearLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:orientation="horizontal"
            android:weightSum="8">

            <ImageView
                android:id="@+id/imageViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_weight="2"
                app:srcCompat="@drawable/ic_lock_outline_white_36dp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextPassword"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/margin_18"
                android:layout_weight="6"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:backgroundTint="@color/white" />

        </LinearLayout>


        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_4dp"
            android:onClick="forgetPassword"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="@dimen/margin_18"
            android:background="@drawable/button_style"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/LinearLayoutRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_18"
            android:layout_marginTop="@dimen/margin_16"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_18"
                android:layout_weight="4"
                android:text="@string/not_a_member"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/button_style"
                android:onClick="register"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
